# screamingQuery

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac
src/: Makefile.am  Parser.cc  Parser.hh  Processor.cc  Processor.hh  Reader.cc  Reader.hh  main.cc  scry.cc
